--- a/src/components/App.css
+++ b/src/components/App.css
@@ -4,7 +4,7 @@
 /* page division css */
 * {
   box-sizing: border-box;
-  background: #1D1D1D;
+  /* background: #1D1D1D; */
 }
 
 .row {
@@ -13,10 +13,8 @@
 
 .btn-apply{
   color: aquamarine;
- 
-  /* color: #454545; */
-
 }
+  /* color: #454545; *}
 
 /* Create two equal columns that sits next to each other */
 .column {
@@ -29,8 +27,335 @@ ul {
 }
 
 /* end */
+/* new css from the assignment */
 
+/* //aI PLAYGROUND ................................................. */
+.AI-playground {
+  width: 62.5px;
+  height: 10.5px;
+  opacity: 0.8;
+  font-family: AmericanTypewriter;
+  font-size: 9px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
+}
+/* // LEAR AI CSS ............................./ */
+.Learn-AI {
+  width: 24px;
+  height: 7.5px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #c6c6c6;
+}
+/* //DOCS CSS................................ */
+.Docs {
+  width: 14px;
+  height: 7.5px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #c6c6c6;
+}
+/* //LOGO CSS ................... */
+.anshul {
+  width: 10px;
+  height: 9.3px;
+}
+/* //ACCOUNT CSS ....................................... */
+.Account {
+  width: 23px;
+  height: 7.5px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #c6c6c6;
+}
+/* //DROPBOX CSS.......................................... */
+.Shape {
+  width: 6px;
+  height: 3.7px;
+  object-fit: contain;
+  background-color: #c6c6c6;
+}
+/* //MAINJS CSS......................................... */
+.mainjs {
+  width: 20px;
+  height: 7.5px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+}
+/* //MAINJS WRAPED RECTANGLE BOXX CSS........................ */
+.Rectangle-16 {
+  width: 36px;
+  height: 15.5px;
+  border-radius: 2px;
+  border: solid 1px #2b2b2b;
+  background-color: #161616;
+}
+/* //LINES DEIVIDING AI AND CHAT BOX REPLY......... */
+.Line-2 {
+  width: 595.5px;
+  height: 1px;
+  opacity: 0.09;
+  border: solid 1px #ffffff;
+}
+/* //SETUP JS .............................. */
+.setupjs {
+  width: 21.5px;
+  height: 7.5px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #c6c6c6;
+}
+/* //SETUPJS RECTANGLE BOX............................. */
+.Rectangle-16-Copy {
+  width: 33px;
+  height: 20px;
+  border-radius: 2px;
+  border: solid 1px #1f1f1f;
+  background-color: #171717;
+}
+/* //+ICON BESIDES SETUPJS........................... */
+.Shape {
+  width: 4px;
+  height: 4px;
+  object-fit: contain;
+  background-color: #c6c6c6;
+}
+/* //APLLY Changes text css........................... */
+.Apply-Changes {
+  width: 57px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 6px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: center;
+  color: #454545;
+}
+/* //applychanges rectangle box container..................... */
+.Rectangle-11 {
+  width: 66px;
+  height: 12px;
+  border-radius: 2px;
+  background-color: #282828;
+}
+/* // line which runs below mainja,setupjs...................... */
+.Line-2-Copy-2 {
+  width: 254px;
+  height: 1.5px;
+  border: solid 1px #2b2b2b;
+}
+/* //bitmap for the ENTER YOUR BIT RESPONSE LOGIC................... */
+.Bitmap {
+  width: 182.5px;
+  height: 290.5px;
+}
+/* //RECTANGLE-14 WRAPPING BITMAP.................................... */
+.Rectangle-14 {
+  width: 254px;
+  height: 366px;
+  background-color: #161616;
+}
+/* //INTERVIEW CLASS TEXT SURROUND................................ */
 .InterviewAssignment {
+  width: 596.5px;
+  height: 408px;
+  background-color: #171717;
+}
+/* //RECTNAGLE FOR HEY THERE BOT TEXT................... */
+.Rectangle {
+  width: 264px;
+  height: 196px;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 4px rgba(0, 0, 0, 0.08);
+  background-color: #1f1f1f;
+}
+/* //CHAT AREA FIRST IMG LOGO................................... */
+.anshul {
+  width: 13px;
+  height: 12px;
+}
+/* //HEY-THERE-BOT TEXT PRESENT ....................... */
+.hey-there-bot {
+  width: 43.5px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #d3d3d3;
+}
+
+/* //HEY THERE BOT rectangle wrap.......................... */
+.Rectangle-4 {
+  width: 136px;
+  height: 25px;
+  border-radius: 8px;
+  background-color: #404040;
+}
+/* //replying BOT logo..................................... */
+.Bot {
+  width: 13px;
+  height: 13px;
+  object-fit: contain;
+}
+/* //bot reply OK */
+.ok {
+  width: 8px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #d3d3d3;
+}
+/* // reply ok rectngle................. */
+.Rectangle-4-Copy {
+  width: 28px;
+  height: 25px;
+  border-radius: 8px;
+  background-color: #404040;
+}
+/* //anshul img logo for how r u..................... */
+.anshul {
+  width: 13px;
+  height: 12px;
+}
+/* //how ARE YOU TEXT......................... */
+.how-are-you {
+  width: 44px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #d3d3d3;
+}
+/* //HOW R U RECTANGE WRAP..................... */
+.Rectangle-4-Copy-2 {
+  width: 136px;
+  height: 25px;
+  border-radius: 8px;
+  background-color: #404040;
+}
+/* //BOT LOGO AGAIN,............................................. */
+.Bot-Copy {
+  width: 13px;
+  height: 13px;
+  object-fit: contain;
+}
+/* //BOT REPLY OK AGAIN........................................ */
+.ok-copy {
+  width: 8px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #d3d3d3;
+}
+/* //BOT RECTANGLE WRAP............................................ */
+.Rectangle-4-Copy-3 {
+  width: 28px;
+  height: 25px;
+  border-radius: 8px;
+  background-color: #404040;
+}
+/* //SCROLL FOR CHAT BOT TEXT AREAR........................... */
+.Bitmap {
+  width: 7px;
+  height: 26px;
+}
+/* //TYPEMESSAGE TETXT CSS...............,,............................ */
+.Type-message-here {
+  width: 68px;
+  height: 9px;
+  font-family: Quicksand;
+  font-size: 7px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #a9a9a9;
+}
+/* //TYPE MESSAGE RECTANGLE WRAP BOX.......................................... */
+.Rectangle-3 {
+  width: 262px;
+  height: 36px;
+  border-radius: 2px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
+  background-color: #1f1f1f;
+}
+
+
+
+
+
+
+
+
+
+
+/* end of the css */
+
+
+
+
+
+
+
+
+/* .InterviewAssignment {
   margin-top: 100px;
     width: 596.5px;
   height: 408px;
@@ -94,4 +419,4 @@ ul {
   border-radius: 2px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
   background-color: #1f1f1f;
-}
+} */
